# cod-agent

./: .env.example  .env.local  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_chat_messages.py
app/: config.py  dependencies.py  main.py
app/api/: routes_chat.py  routes_extraction.py  routes_packages.py
app/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py
app/extraction/: base.py  factory.py  llm_extractor.py
app/llm/: base.py  factory.py  openai_compat.py
app/models/: __init__.py  audit_log.py  chat_message.py  extraction_result.py  package.py
app/parsing/: base.py  docling_parser.py  factory.py  pdfplumber_parser.py
app/pii/: base.py  factory.py  noop_filter.py  presidio_filter.py
app/pipeline/: chunker.py  process_package.py
app/prompts/: extraction.py
app/prompts/schemas/: pledge_fields.json
app/rag/: base.py  factory.py  null_retriever.py  qdrant_retriever.py
app/schemas/: document.py  extraction.py  package.py
app/storage/: base.py  factory.py  s3_storage.py
docs/: local-dev-fixes.md  sprint2-changes.md  sprint3-changes.md  sprint4-changes.md  sprint5-changes.md  sprint6-changes.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  chat.ts  (+3 more)
scripts/: kill_backend.sh  start_backend.sh  start_frontend.sh
tests/: conftest.py
tests/unit/: test_auth.py  test_extraction.py  test_packages.py  test_parsing.py  test_pii.py  test_rag.py
(+12 files in other folders)
