[project]
name = "cod-agent"
version = "0.1.0"
description = "AI-агент анализа кредитной обеспечительной документации"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # Storage
    "boto3>=1.35.0",
    # LLM
    "httpx>=0.28.0",
    "openai>=1.55.0",
    # RAG
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    # Parsing
    "docling>=2.10.0",
    "pdfplumber>=0.11.0",
    # PII
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.8.0",
    # Utils
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
eval = [
    "ragas>=0.2.0",
    "deepeval>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
